# ChangeLog for dev-python/html2data
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Oct 2010; James Rowe <jnrowe@gmail.com> html2data-0.3.ebuild:
  Keyworded amd64.

  29 Sep 2010; James Rowe <jnrowe@gmail.com> html2data-0.2.ebuild:
  Keyworded x86.

  29 Sep 2010; James Rowe <jnrowe@gmail.com> html2data-0.2.ebuild:
  Keyworded amd64.

*html2data-0.3 (02 Sep 2010)

  02 Sep 2010; James Rowe <jnrowe@gmail.com> +html2data-0.3.ebuild:
  Version bump [33c].

  30 Aug 2010; James Rowe <jnrowe@gmail.com> html2data-0.2.ebuild:
  Keyworded ~x86.

*html2data-0.2 (30 Aug 2010)

  30 Aug 2010; James Rowe <jnrowe@gmail.com> +html2data-0.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me [8a5].
