@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST html2data-0.2.tar.gz 2085 RMD160 e2fefa0d31bc26b7b78f831c421782f49215476a SHA1 7b7a13ceab5a44b215517fa6a6c598cb58b28b5f SHA256 e1f007745dc45dee46cb3a0adf899706a5a1f7c4d43293a6553afcc61e2e5de8
 DIST html2data-0.3.tar.gz 2433 RMD160 6b16a269ab4b3f1d8da8e2c8102bf7ca80cd620e SHA1 4f6cf905adf7e0cfd1ff2da6584e682254dc289c SHA256 6de4aa992a1ba76d030db89fbbaefaa4c54c6e1e24b7e43449e5eeca7e038986
-EBUILD html2data-0.2.ebuild 461 RMD160 b9ebbc094b45b1e790bc69999fe63621d77aec7d SHA1 aaae08806d9dc7ffc73c2cf08d78bbe802da5c7b SHA256 262ee3f61aaa408340eda942a3c4b3ea6ec5c4b84e16b6c5af381a523f6220b4
-EBUILD html2data-0.3.ebuild 462 RMD160 f25083e2adf224aeac86630719cdad7883ab2431 SHA1 b1daac1d3d1d80fa3de10dff85e2fa22958b6b42 SHA256 3b5ede7c2630dcfa84925f91b28fea7728bb93e05c6f9080eb9c81e1ff01ae11
-MISC ChangeLog 734 RMD160 f4b62302adeec0ebc4b5ed50f8e502cea6b84991 SHA1 32e4e624729bd4c6aaba25c0e1b66ef83a97df70 SHA256 d631788f018d14a3bee91f9568788ff4d084abb58828906dfc1b689c1eec2111
+EBUILD html2data-0.3.ebuild 461 RMD160 b9ebbc094b45b1e790bc69999fe63621d77aec7d SHA1 aaae08806d9dc7ffc73c2cf08d78bbe802da5c7b SHA256 262ee3f61aaa408340eda942a3c4b3ea6ec5c4b84e16b6c5af381a523f6220b4
+MISC ChangeLog 844 RMD160 b0c8a5237d050b7cf6aa9fa7c79e3dd8b3bc8fc6 SHA1 30129dfe18ec42220df7fa60731975f885629244 SHA256 e35c0348f9c2e148f237b27e741f203c84f3c33ef82e012cb04ea8577bcb667e
 MISC metadata.xml 366 RMD160 c740f8af6720018e07617b35cc6e037a5f02e0e7 SHA1 40664235e13ed63f67e830c6efe3b0fc8bb24dc2 SHA256 2a5d1a3f4835cb899ce6009b9ebfd94d7906727972434d627f466e05b133b6be
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyn14oACgkQzJrj3cAXR0ke+wCePQjnuYcCREEPPh9cyXczAKH5
-PjcAnjNHsEtImoACL+tvXxto3HbeSVdF
-=Afjx
+iEYEARECAAYFAkyn2L4ACgkQzJrj3cAXR0kOJgCfTTnHkTk5eXswWJ+KOPdxW8Q/
+OwkAoK8b98Cj0MT1mFGv1anDaLksyqYw
+=yDOg
 -----END PGP SIGNATURE-----
