@@ -14,7 +14,7 @@ DESCRIPTION="A simple way to transform a HTML file or URL to structured data."
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="dev-python/setuptools"
