@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
-dev-python/httplib2 dev-python/lxml >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/h/html2data/html2data-0.2.tar.gz
-
-http://pypi.python.org/pypi/html2data/
-BSD
-A simple way to transform a HTML file or URL to structured data.
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-test
-
-
-
-3
-
-compile install postinst postrm prepare test
-
-
-
-
-
