@@ -6,7 +6,7 @@ mirror://pypi/h/html2data/html2data-0.3.tar.gz
 http://pypi.python.org/pypi/html2data/
 BSD
 A simple way to transform a HTML file or URL to structured data.
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 test
 
