@@ -1,4 +1,3 @@
-REM 2010-10-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/html2data-0.3 %a
 REM 2010-10-05 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/gistapi-0.2.1 %a
 REM 2010-10-05 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/gistapi-0.2.1 %a
 REM 2010-10-06 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 x11-plugins/vicious-2.0.1 %a
