@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Oct 2010; James Rowe <jnrowe@gmail.com> -html2data-0.2.ebuild,
+  html2data-0.3.ebuild:
+  Keyworded x86.
+
   03 Oct 2010; James Rowe <jnrowe@gmail.com> html2data-0.3.ebuild:
   Keyworded amd64.
 
